--- a/styles/style.css
+++ b/styles/style.css
@@ -48,10 +48,9 @@ body {
 .navbar {
   position: fixed;
   height: 60px;
-  width: 100%;
+  width: 100vw;
   padding: 20px 60px;
-  z-index: 99;
-  background-color: transparent;
+  z-index: 2;
 
   display: flex;
   justify-content: space-between;
@@ -63,7 +62,7 @@ body {
   position: relative;
   width: 100%;
   height: 60vh;
-  top: 0;
+  z-index: 1;
   background-image: linear-gradient(
       rgba(250, 250, 250, 0.8),
       rgba(250, 250, 250, 0.8)
@@ -91,12 +90,16 @@ body {
 
 .navbar-solid {
   position: fixed;
+  height: 60px;
+  width: 100vw;
+  padding: 20px 60px;
   top: 0;
-  background-color: transparent;
+  background-color: var(--background);
 
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 
 .logo {
@@ -139,12 +142,28 @@ body {
   display: none;
 }
 
-/* HERO SECTION */
+/* NEWS SECTION */
 
-.section-hero {
+.section-news {
   height: 100vh;
   width: 100%;
   margin-top: 60px;
+  padding: 0px 60px;
+
+  display: grid;
+  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  grid-gap: 10px;
+}
+
+.news-item {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.news-item__image-container img {
+  width: 100%;
+  height: 250px;
 }
 
 /* BUTTONS */
@@ -169,6 +188,20 @@ body {
   color: var(--background);
 }
 
+/* DIVIDER */
+
+.divider {
+  height: 5px;
+  background-color: var(--foreground);
+  margin: 60px 60px;
+}
+
+/*SUB-HEADING */
+.sub-heading {
+  width: 100%;
+  text-align: center;
+}
+
 /* RESPONSIVE */
 
 @media (max-width: 768px) {
@@ -182,5 +215,27 @@ body {
 
   .header__heading {
     max-width: 300px;
+  }
+
+  .section-news {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar__link-container {
+    display: none;
+  }
+
+  .more {
+    display: block;
+  }
+
+  .header__heading {
+    max-width: 300px;
+  }
+
+  .section-news {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
