--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@ body {
 /* NEWS SECTION */
 
 .section-news {
-  height: 100vh;
+  height: fit-content;
   width: 100%;
   margin-top: 60px;
   padding: 0px 60px;
@@ -164,6 +164,19 @@ body {
 .news-item__image-container img {
   width: 100%;
   height: 250px;
+}
+
+/* RESPONSIBILITY SECTION */
+
+.section-responsibility {
+  width: 100%;
+  padding: 0px 60px;
+  margin-top: 60px;
+}
+
+.section-responsibility__image-container img {
+  width: 100%;
+  height: 100%;
 }
 
 /* BUTTONS */
@@ -196,10 +209,16 @@ body {
   margin: 60px 60px;
 }
 
-/*SUB-HEADING */
+/*TYPOGRAPHY */
 .sub-heading {
   width: 100%;
   text-align: center;
+}
+
+.paragraph {
+  margin: 20px auto;
+  font-size: larger;
+  max-width: 600px;
 }
 
 /* RESPONSIVE */
@@ -220,6 +239,11 @@ body {
   .section-news {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .paragraph {
+    font-size: small;
+    max-width: 300px;
+  }
 }
 
 @media (max-width: 480px) {
@@ -237,5 +261,10 @@ body {
 
   .section-news {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .paragraph {
+    font-size: small;
+    max-width: 300px;
   }
 }
