--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@
 
 body {
   background-color: var(--background);
+  overflow-x: hidden;
 }
 
 /* HEADER */
@@ -146,7 +147,7 @@ body {
 
 .section-news {
   height: fit-content;
-  width: 100%;
+  width: 100vw;
   margin-top: 60px;
   padding: 0px 60px;
 
@@ -166,17 +167,107 @@ body {
   height: 250px;
 }
 
-/* RESPONSIBILITY SECTION */
+/* PLACEHOLDER SECTION */
 
-.section-responsibility {
+.placeholder-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.section-placeholder {
   width: 100%;
   padding: 0px 60px;
   margin-top: 60px;
 }
 
-.section-responsibility__image-container img {
+.section-placeholder__image-container img {
   width: 100%;
   height: 100%;
+}
+
+/* FOOTER */
+
+.footer {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: var(--foreground);
+  background-color: var(--background);
+}
+
+.footer > * {
+  flex: 1 100%;
+}
+
+.footer__addr {
+  margin-right: 1.25em;
+  margin-bottom: 2em;
+}
+
+.footer__addr h2 {
+  margin-top: 1.3em;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.nav__title {
+  font-weight: 800;
+  font-size: 15px;
+}
+
+.footer address {
+  font-style: normal;
+  color: var(--muted-foreground);
+}
+
+.footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer li {
+  line-height: 2em;
+}
+
+.footer a {
+  text-decoration: none;
+}
+
+.footer__nav {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.footer__nav > * {
+  flex: 1 50%;
+  margin-right: 1.25em;
+}
+
+.nav__ul a {
+  color: var(--muted-foreground);
+}
+
+.nav__ul--extra {
+  column-count: 2;
+  column-gap: 1.25em;
+}
+
+.legal {
+  margin-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  color: var(--muted-foreground);
+}
+
+.legal__links {
+  display: flex;
+  align-items: center;
+}
+
+.heart {
+  color: var(--foreground);
 }
 
 /* BUTTONS */
@@ -207,6 +298,12 @@ body {
   height: 5px;
   background-color: var(--foreground);
   margin: 60px 60px;
+}
+
+.divider-sm {
+  height: 2px;
+  background-color: var(--foreground);
+  margin: 40px 0px;
 }
 
 /*TYPOGRAPHY */
@@ -266,5 +363,29 @@ body {
   .paragraph {
     font-size: small;
     max-width: 300px;
+  }
+}
+
+@media screen and (min-width: 24.375em) {
+  .legal .legal__links {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 40.375em) {
+  .footer__nav > * {
+    flex: 1;
+  }
+
+  .nav__item--extra {
+    flex-grow: 2;
+  }
+
+  .footer__addr {
+    flex: 1 0px;
+  }
+
+  .footer__nav {
+    flex: 2 0px;
   }
 }
