--- a/styles/style.css
+++ b/styles/style.css
@@ -98,7 +98,7 @@ body {
       rgba(250, 250, 250, 0.8),
       rgba(250, 250, 250, 0.8)
     ),
-    url(teamwork.jpg);
+    url(./images/teamwork.jpg);
   background-size: cover;
   background-position: center;
 
