--- a/styles/style.css
+++ b/styles/style.css
@@ -292,6 +292,14 @@ body {
 
 /* JOB-POSTINGS */
 
+.apply-here-btn {
+  margin: 30px 0;
+  width: 100%;
+  padding: 0px 60px;
+  display: flex;
+  justify-content: center;
+}
+
 .job-postings {
   border: 3px solid var(--foreground);
   border-radius: 10px;
