--- a/styles/style.css
+++ b/styles/style.css
@@ -754,6 +754,8 @@ body {
   grid-template-rows: 60px;
   width: 100vw;
   height: 100vh;
+  resize: both;
+  overflow: scroll;
 }
 .timetable .accent-pink-gradient {
   display: flex;
@@ -764,50 +766,6 @@ body {
 }
 .timetable .accent-pink-gradient:hover {
   box-shadow: 0 20px 30px 0 rgba(238, 142, 188, 0.3);
-  transform: scale(1.05);
-}
-.timetable .accent-orange-gradient {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(135deg, #eec08e, #dcee8e);
-  transition: 0.2s ease box-shadow, 0.2s ease transform;
-}
-.timetable .accent-orange-gradient:hover {
-  box-shadow: 0 20px 30px 0 rgba(238, 192, 142, 0.3);
-  transform: scale(1.05);
-}
-.timetable .accent-green-gradient {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(135deg, #bcee8e, #8eeea0);
-  transition: 0.2s ease box-shadow, 0.2s ease transform;
-}
-.timetable .accent-green-gradient:hover {
-  box-shadow: 0 20px 30px 0 rgba(188, 238, 142, 0.3);
-  transform: scale(1.05);
-}
-.timetable .accent-cyan-gradient {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(135deg, #8eeec0, #8edcee);
-  transition: 0.2s ease box-shadow, 0.2s ease transform;
-}
-.timetable .accent-cyan-gradient:hover {
-  box-shadow: 0 20px 30px 0 rgba(142, 238, 192, 0.3);
-  transform: scale(1.05);
-}
-.timetable .accent-blue-gradient {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(135deg, #8ebcee, #a08eee);
-  transition: 0.2s ease box-shadow, 0.2s ease transform;
-}
-.timetable .accent-blue-gradient:hover {
-  box-shadow: 0 20px 30px 0 rgba(142, 188, 238, 0.3);
   transform: scale(1.05);
 }
 .timetable .accent-purple-gradient {
@@ -830,7 +788,8 @@ body {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 11px;
+  resize: both;
 }
 .timetable .week-names > div {
   display: flex;
@@ -839,12 +798,15 @@ body {
   width: 100%;
   height: 100%;
   box-shadow: inset 1px 0 0 #eceff1;
+  resize: both;
+
 }
 .timetable .time-interval {
   grid-area: time;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
-  font-size: 14px;
+  font-size: 12px;
+  resize: both;
 }
 .timetable .time-interval > div {
   display: flex;
