Finished login page

--- a/styles/style.css
+++ b/styles/style.css
@@ -342,27 +342,6 @@ body {
   font-weight: bold;
 }
 
-.apply-form input[type="text"],
-.apply-form input[type="email"],
-.apply-form input[type="tel"],
-.apply-form input[type="date"],
-.apply-form select {
-  width: calc(100% - 10px);
-  padding: 8px;
-  margin: 5px 0 15px;
-  border: 1px solid var(--border);
-  border-radius: 10px;
-}
-
-.apply-form input[type="text"]:focus,
-.apply-form input[type="email"]:focus,
-.apply-form input[type="tel"]:focus,
-.apply-form input[type="date"]:focus,
-.apply-form select:focus {
-  outline: none;
-  border: 2px solid var(--foreground);
-}
-
 .apply-form input[type="checkbox"] {
   margin-right: 5px;
 }
@@ -398,6 +377,67 @@ body {
   background-color: var(--foreground);
 }
 
+/* LOGIN PAGE */
+.login {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-form {
+  width: 400px;
+  height: 500px;
+  background-color: var(--background);
+  border-radius: 10px;
+  border: 3px solid var(--foreground);
+  padding: 30px 20px;
+
+  display: grid;
+  grid-template-rows: 3fr 1fr 1fr 1fr;
+}
+
+.login-form__title {
+  place-self: center;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.login-form__field {
+  display: flex;
+  flex-direction: column;
+  place-self: center;
+  width: 80%;
+  gap: 5px;
+}
+
+.login-form__label {
+  font-size: 16px;
+}
+
+.login-form__input {
+  outline: none;
+  padding: 10px;
+  border-radius: 5px;
+  height: 30px;
+}
+
+.login-form__btn {
+  width: 80%;
+  place-self: center;
+}
+
+.login-form__homelink {
+  text-align: center;
+  font-size: 16px;
+}
+
+.login-form__homelink a {
+  text-decoration: none;
+  color: var(--foreground);
+  font-weight: 800;
+}
+
 /* FOOTER */
 
 .footer {
@@ -418,14 +458,14 @@ body {
 }
 
 .footer__addr h2 {
-  margin-top: 1.3em;
+  margin-top: 10px;
   font-size: 15px;
   font-weight: 400;
 }
 
 .nav__title {
   font-weight: 800;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .footer address {
@@ -449,6 +489,7 @@ body {
 .footer__nav {
   display: flex;
   flex-flow: row wrap;
+  margin-top: -5px;
 }
 
 .footer__nav > * {
@@ -487,6 +528,32 @@ body {
   height: 50px;
   padding: 10px;
 }
+
+/* INPUTS */
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+input[type="password"],
+select {
+  width: 100%;
+  padding: 8px;
+  margin: 5px 0 15px;
+  border: 2px solid var(--border);
+  border-radius: 5px;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+input[type="date"]:focus,
+input[type="password"]:focus,
+select:focus {
+  outline: none;
+  border: 2px solid var(--foreground);
+}
+
 /* BUTTONS */
 
 .btn {
@@ -635,7 +702,7 @@ body {
 
 .toggle__input:checked + .toggle__control:after {
   background-color: var(--background);
-  left: 30px;
+  left: 32px;
 }
 
 /* DIVIDER */
@@ -752,10 +819,11 @@ body {
   grid-template-areas: ". week" "time content";
   grid-template-columns: 120px;
   grid-template-rows: 60px;
-  width: 100vw;
+  width: 100%;
+  padding: 0 60px;
   height: 100vh;
   resize: both;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 .timetable .accent-pink-gradient {
   display: flex;
@@ -795,11 +863,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 10px;
   width: 100%;
   height: 100%;
   box-shadow: inset 1px 0 0 #eceff1;
   resize: both;
-
 }
 .timetable .time-interval {
   grid-area: time;
