--- a/styles/style.css
+++ b/styles/style.css
@@ -705,6 +705,25 @@ select:focus {
   left: 32px;
 }
 
+/* MAP */
+
+.map-container {
+  position: relative;
+  padding: 0 60px;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.map-container iframe {
+  position: absolute;
+  padding: 0 60px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* DIVIDER */
 
 .divider {
