--- a/styles/style.css
+++ b/styles/style.css
@@ -617,7 +617,8 @@ select:focus {
   left: 0;
   height: 20px;
   width: 20px;
-  background-color: var(--foreground); /* Change to your desired color */
+  border: 1px solid var(--foreground);
+  background-color: var(--background); /* Change to your desired color */
 }
 
 .checkbox__input:checked ~ .checkbox__checkmark:after {
@@ -625,12 +626,16 @@ select:focus {
   position: absolute;
   display: block;
   left: 30%;
-  top: 10%;
+  top: 5%;
   width: 5px;
   height: 10px;
   border: solid var(--background);
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
+}
+
+.checkbox__input:checked ~ .checkbox__checkmark {
+  background-color: var(--foreground);
 }
 
 /* SLIDER */
