--- a/styles/style.css
+++ b/styles/style.css
@@ -947,7 +947,7 @@ select:focus {
 	 --baseSize: 16px;
 	 --baseLineHeight: 1.5;
 	 --fontFamily: Inter, sans-serif;
-	 --pink: #000000;
+	 --black: #000000;
 	 --blackLight: #000000;
 	 --black: #000000;
 	 --redTick: url("data:image/svg+xml,%3Csvg width='18' height='14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.552.134 5.717 10.97 1.448 6.701 0 8.149l5.717 5.717L18 1.583 16.552.134Z' fill='%23EA455F'/%3E%3C/svg%3E%0A");
@@ -1033,9 +1033,9 @@ select:focus {
 }
  .button2 {
 	 --bgColor: var(--blackLight);
-	 --color: var(--pink);
+	 --color: var(--black);
 	 --shadowColor: #a3a3a3;
-	 --outline: var(--pink);
+	 --outline: var(--black);
 	 border-radius: 0.5rem;
 	 display: block;
 	 width: 100%;
@@ -1052,7 +1052,7 @@ select:focus {
 	 user-select: none;
 }
  .button2--black {
-	 --bgColor: var(--pink);
+	 --bgColor: var(--black);
 	 --color: #fff;
 	 --shadowColor: #a0a0a0;
 }
@@ -1176,7 +1176,7 @@ select:focus {
 	 box-sizing: border-box;
 	 display: block;
 	 position: absolute;
-	 border: 2px solid var(--pink);
+	 border: 2px solid var(--black);
 	 width: var(--small);
 	 height: var(--small);
 	 border-radius: var(--radius);
