--- a/styles/style.css
+++ b/styles/style.css
@@ -1257,3 +1257,37 @@ select:focus {
     --baseSize: 14px;
   }
 }
+
+/* PROFILE */
+.profile-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  box-shadow:
+  0px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+  0px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+  0px 12.5px 10px rgba(0, 0, 0, 0.035),
+  0px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+  0px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+  0px 100px 80px rgba(0, 0, 0, 0.07);
+  overflow: hidden;
+  display:inline-block;
+  vertical-align:middle;
+}
+.profile-img img{
+  width:100%;
+}
+
+div.team-img{
+  width: 40%;
+  background-color: white;
+  box-shadow: 
+  0 4px 8px 0 rgba(0, 0, 0, 0.2), 
+  0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
