--- a/styles/style.css
+++ b/styles/style.css
@@ -199,7 +199,7 @@ body {
   background-color: transparent;
   height: 20px;
   width: 20px;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -867,6 +867,10 @@ select:focus {
 @media (max-width: 768px) {
   .navbar__link-container {
     display: none;
+  }
+
+  .navigation__button {
+    display: flex;
   }
 
   .header__heading {
