--- a/styles/style.css
+++ b/styles/style.css
@@ -1304,3 +1304,118 @@ div.container {
   font-weight: bolder;
   text-align: center;
 }
+
+/*HR*/
+input[type=text], input[type=number], input[type=date], input[type=email], input[type=phone] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  font-size: 15px;
+  display: inline-block;
+  background-color:  white;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+}
+
+
+.heading_DB{
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  border-collapse: collapse;
+  width: 100%;
+}
+.heading_SC{
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  left: 0;
+  line-height: 200px;
+  margin-top: -100px;
+  position: absolute;
+  text-align: center;
+  transition-duration: 0.5s;
+  top: 50%;
+  width: 100%;
+}
+.SCbutton {
+  border: none;
+  border-radius: 15px;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 59vh 73vh;
+  transition-duration: 0.5s;
+  cursor: pointer;
+} 
+.submitbutton {
+  border: none;
+  border-radius: 15px;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.button1 {
+  background-color: #434343;
+  color: white;
+  border: 1px solid #434343;
+}
+
+.button1:hover {
+  background-color: white; 
+  color: black; 
+  border: 1px solid #434343;
+}
+
+
+.inline {
+  display:inline;
+}
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  #customers td, #customers th {
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  
+  #customers tr:hover {background-color: #ddd;}
+  
+  #customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: 5px;
+    background-color: #434343;
+    color: white;
+  }
+  input[type=text], input[type=number], input[type=date], input[type=email], input[type=phone] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    font-size: 15px;
+    display: inline-block;
+    background-color:  white;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+  }
+
+  
+  
+
+  
